tests/regression/error/hw4_error14.sml
val prog =
  PROGRAM
    {classes=[],decls=[],funcs=[],
     stmts=[ST_EXP {exp=EXP_UNARY {opnd=EXP_BOOL true,opr=UOP_MINUS}}]}
  : program
;
